pull from eslint-config-base

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,7 @@
     "jest/globals": true
   },
   "extends": [
-    "@bouzomgi/s/backend"
+    "@bouzomgi/base/backend"
   ],
   "parserOptions": {
     "ecmaVersion": "latest",
