--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
-    "@bouzomgi/eslint-configs": "^1.0.22",
+    "@bouzomgi/eslint-config-base": "^1.0.2",
     "@types/axios": "^0.9.36",
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.7",
@@ -52,6 +52,7 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^27.9.0",
+    "eslint-plugin-prettier": "^5.2.6",
     "jest": "^29.7.0",
     "jest-mock-extended": "^3.0.5",
     "lodash": "^4.17.21",
