--- a/.env.docker
+++ b/.env.docker
@@ -19,5 +19,7 @@ FRONTEND_ENDPOINTS='https://localhost'
 TOKEN_SECRET='+B*8nUZLkhdI7cBK+wt.St>3UF=k|5uo5{P@Q=&=VVmnTYCl;A(vwh/)h}!.J8pP'
 
 # Acceptance testing
+SERVICE_ACCOUNT_USERNAME='admin'
+SERVICE_ACCOUNT_PASSWORD='pass'
 TESTING_HTTP_ENDPOINT='http://localhost'
 TESTING_WS_ENDPOINT='ws://localhost'
