no default types

--- a/.env.docker
+++ b/.env.docker
@@ -3,8 +3,8 @@ PORT=4000
 
 DATABASE_URL='postgresql://admin:pass@database:5432/chatter?schema=public'
 
-DB_USERNAME='admin'
-DB_PASSWORD='pass'
+DB_USERNAME='brian'
+DB_PASSWORD='admin'
 
 STORAGE_BUCKET_NAME='local-chatter-storage'
 
