fix docker compose

--- a/.env.docker
+++ b/.env.docker
@@ -2,9 +2,8 @@ NODE_ENV=development
 PORT=4000
 
 DATABASE_URL='postgresql://admin:pass@database:5432/chatter?schema=public'
-
-DB_USERNAME='brian'
-DB_PASSWORD='admin'
+DB_USERNAME='admin'
+DB_PASSWORD='pass'
 
 STORAGE_BUCKET_NAME='local-chatter-storage'
 
@@ -19,7 +18,7 @@ FRONTEND_ENDPOINTS='https://localhost'
 TOKEN_SECRET='+B*8nUZLkhdI7cBK+wt.St>3UF=k|5uo5{P@Q=&=VVmnTYCl;A(vwh/)h}!.J8pP'
 
 # Acceptance testing
-SERVICE_ACCOUNT_USERNAME='admin'
+SERVICE_ACCOUNT_USERNAME='brian'
 SERVICE_ACCOUNT_PASSWORD='pass'
 TESTING_HTTP_ENDPOINT='http://localhost'
 TESTING_WS_ENDPOINT='ws://localhost'
