--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -33,8 +33,8 @@ services:
     environment:
       - NODE_ENV=${NODE_ENV}
       - DATABASE_URL=${DATABASE_URL}
-      - SERVICE_ACCOUNT_USERNAME=${DB_USERNAME}
-      - SERVICE_ACCOUNT_PASSWORD=${DB_PASSWORD}
+      - SERVICE_ACCOUNT_USERNAME=${SERVICE_ACCOUNT_USERNAME}
+      - SERVICE_ACCOUNT_PASSWORD=${SERVICE_ACCOUNT_PASSWORD}
     networks:
       - chatter-network
 
