--- a/.github/workflows/on-merge.yml
+++ b/.github/workflows/on-merge.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: 'ubuntu-latest'
     permissions:
       id-token: write
-      contents: read
+      contents: write
     environment: prod
     steps:
       - name: Checkout
